# overmind-desktop

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
api/: Cargo.toml
api/src/: main.rs
server/: app.js
src/: App.css  App.tsx  Table.tsx  binanceHelpers.ts  constants.ts  dataHelpers.ts  fsHelpers.ts  main.tsx  styles.css  utils.ts
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src/dashboard/: Alert.tsx  Balance.tsx  CandlestickChart.tsx  Chart.tsx  Dashboard.tsx  Deposits.tsx  Earnings.tsx  News.tsx  Portfolio.tsx  Report.tsx  RevenueChart.tsx  Settings.tsx  listItems.tsx  styles.css  tourSteps.ts
tauri-plugin/: server.cjs
