[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
reqwest = { version = "0.11.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crypto-hash = "0.3.4"
chrono = "0.4.38"
serde_urlencoded = "0.7.1"
